@@ -153,6 +153,7 @@ Fixes:
    * Fix time string display to handle hours right
    * Fix elm_config to properly check file type.
    * ignore tab key widget focus change if control/alt is pressed
+   * prevent blank entry hoversels
 
 Removals:
 
